Fix #16 - adding hover tooltip background/text colors for visibility

--- a/website/src/components/gallery/ShowcaseTooltip/styles.module.css
+++ b/website/src/components/gallery/ShowcaseTooltip/styles.module.css
@@ -8,8 +8,10 @@
  .tooltip {
     border-radius: 4px;
     padding: 4px 8px;
-    color: var(--site-color-tooltip);
-    background: var(--site-color-tooltip-background);
+    /* color: var(--site-color-tooltip);
+    background: var(--site-color-tooltip-background); */
+    color:#ffffff;
+    background-color: #245e94;
     font-size: 0.8rem;
     z-index: 500;
     line-height: 1.4;
